# multi-core-iir-code

./: CMakeLists.txt  LICENSE  README.md
example/: README.md  filter.cpp
include/: recursive_filter.h
include/recursive_filter/: buffer.h  data_block.h  icc_forward.h  init_adder.h  init_cond_correction_serial.h  inter_block_rd.h  multi_core_filter.h  no_state_zic.h  recursive_doubling.h  second_order_cores_serial.h  series_serial.h  tbb_iir_multi_core.h  zero_init_condition_serial.h
test/: README.md  cascaded_sos.cpp  cascaded_sos_unlimited.cpp  filter_test.cpp  single_sos.cpp  single_sos_unlimited.cpp  varying_intra_block.cpp
